# GazeboRosPackages

./: .gitignore
src/cle_ros_msgs/: CMakeLists.txt
src/demonstrator6_description/config/: ros_controllers_ur5e.yaml
src/franka_description/robots/: model.urdf  panda.control.xacro
src/gazebo_ros_muscle_interface/: CMakeLists.txt
src/gazebo_ros_muscle_interface/src/: gazebo_ros_muscle_interface.cpp
src/iba_manager/: CMakeLists.txt
src/iba_manager/scripts/: external_module_manager.py
src/iba_manager/src/: external_module.py
src/iba_manager/srv/: GetData.srv
src/iba_multimodule_experiment/: CMakeLists.txt
src/iba_multimodule_experiment/scripts/: manager_module.py  module1.py  module2.py  module3.py
src/iba_multimodule_experiment/srv/: GetData.srv  SetData.srv
src/lauron_control/: CMakeLists.txt
src/sacc_rec_grasp/: CMakeLists.txt  README.md  package.xml
src/sacc_rec_grasp/config/: arm_controllers.yaml  catmux_session.yaml  head_controllers.yaml  preprocessing_config.yaml  svh_controllers.yaml
src/sacc_rec_grasp/data/: ball.npy  bottle.npy  pen.npy  plot_traj.py
src/sacc_rec_grasp/html/: bower.json  main.js  (+2 more)
src/sacc_rec_grasp_description/: CMakeLists.txt  package.xml
src/schunk_description/: package.xml
src/schunk_description/launch/: test.launch
src/schunk_description/meshes/lwa4p_10percent_plus/: arm_1_link.stl  arm_2_link.stl  arm_3_link.stl  arm_4_link.stl  arm_5_link.stl  arm_6_link.stl
src/schunk_description/urdf/lwa4p/: arm.urdf.xacro  lwa4p.gazebo.xacro  lwa4p.transmission.xacro  lwa4p.urdf.xacro  lwa4p_10percent_plus.urdf.xacro
(+131 files in other folders)
