<?xml version="1.0"?>
<package>
  <name>schunk_description</name>
  <version>0.5.1</version>
  <description>This package contains the description (mechanical, kinematic, visual,
  etc.) of the Schunk LWA4P arm, including .dae models for compatibility with the Robot Web Tools</description>
 
  <license>LGPL</license>

  <url type="website">http://ros.org/wiki/schunk_description</url>
  <!-- <url type="bugtracker"></url> -->

  <maintainer email="nhg@ipa.fhg.de">Nadia Hammoudeh Garcia</maintainer>
  <author email="fmw@ipa.fhg.de">Florian Weisshardt</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>gazebo_ros</run_depend>
  <build_depend>urdf</build_depend>
  <run_depend>urdf</run_depend>

  <test_depend>gtest</test_depend>

  <export>
    <gazebo_ros gazebo_media_path="${prefix}"/>
  </export>
</package>
